// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slice test on ios Related articles renders a single child element 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "red",
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexGrow": 1,
        "width": "50%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Test text
    </Text>
  </View>
</View>
`;

exports[`Slice test on ios Related articles renders multiple child elements 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "red",
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexGrow": 1,
        "width": "50%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Test text 1
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Test text 2
    </Text>
  </View>
</View>
`;
